ext3grep-0.3.1

        Accept weird characters in filenames (almost always).
	Added code to warn about rejected filenames because of it's characters
	  (although that is hardly used now we that accept everything).
	Added code that collects statistics about the number
	  of weird characters in a directory (not used yet).

ext3grep-0.3.0

	Added support for filesystems without the incompatibility feature EXT3_FEATURE_INCOMPAT_FILETYPE.
	Removed assertion `inode_to_count.size() == 1'. The new algorithm uses
	  the inode found in the journal in this case now (code that I added to 0.1.0).
	Improved some error messages.

ext3grep-0.2.0

	Output error message if device can't be opened.
	Fixed a MAJOR bug for 32-bit systems.

ext3grep-0.1.1

	Added largefile support; 64-bit off_t.

ext3grep-0.1.0

	Now using journal to find inode numbers of extended directory blocks!
	Added detection of reused or corrupted indirect blocks, aborting iteration.
	Now using mmap(2) for the inode tables, use --disable-mmap to disable.
	PCH dependency problem was fixed.
	Write output to directory "RESTORED_FILES" instead of to ".".
	Fixed a bug that prevented the recovery of files in the root.
	Fixed infinite loop when --journal-transaction is out of range.

ext3grep-0.0.4

	Commandline option --histogram: Fixed initialization of commandline_before
	  when --before is not given and time_t is signed.
	Use new struct Inode instead of ext3_inode. Use inode directly from
	what was read from disk without copying them first (sizeof(Inode) is
	equal to the real inode size on disk, so this is possible). Use
	accessors for every access to an inode.

ext3grep-0.0.3

	Using e2progs headers instead of kernel headers.
	Print inode when assert(first_block) fails.
	Changed license from GPL3 to GPL2.
	Commandline option --version: Print correct version of ext3grep .
	Commandline option --zeroed-inodes: Does not need parameter.
	Fixed compiler warning on 32-bit.